# barcode-keyboard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  build.rs  netlify.toml
.github/workflows/: pages.yml  release.yml
public/: index.html  receiver.html  scanner.html
public/wasm/: barcode_keyboard.d.ts  barcode_keyboard.js  barcode_keyboard_bg.wasm  barcode_keyboard_bg.wasm.d.ts
src/: lib.rs  node.rs
src/hid/: windows.rs
src/serial/: mod.rs
