[package]
name = "barcode-keyboard"
version = "0.2.0"
edition = "2024"
description = "Turn your smartphone into a wireless barcode scanner that types into any PC application"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
required-features = ["cli"]

[[bin]]
name = "keyboard"
required-features = ["keyboard"]

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
chrono = { version = "0.4", optional = true }
clap = { version = "4.5.30", features = ["derive"], optional = true }
dirs = { version = "5", optional = true }
eframe = { version = "0.30", optional = true }
enigo = { version = "0.2", optional = true }
qrcode = { version = "0.14", optional = true }
regex = { version = "1", optional = true }
sys-locale = { version = "0.3", optional = true }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
iroh = { version = "0.97", default-features = false }
n0-future = "0.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde-wasm-bindgen = "0.6.5"
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
tokio-serial = { version = "5.4", optional = true }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4.50"
wasm-streams = "0.4.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[features]
cli = ["tokio/full", "dep:clap"]
keyboard = ["tokio/full", "dep:eframe", "dep:enigo", "dep:qrcode", "dep:sys-locale", "dep:dirs", "dep:serde_json", "dep:regex", "dep:chrono", "hid", "dep:tokio-serial"]
hid = []

[build-dependencies]
# Icon generation for the Windows exe resource
[target.'cfg(windows)'.build-dependencies]
ico = "0.3"
winres = "0.1"

[profile.release]
codegen-units = 1
strip = "symbols"
debug = false
lto = true
opt-level = "z"
panic = 'abort'
